--- a/components/header/style.module.css
+++ b/components/header/style.module.css
@@ -10,6 +10,7 @@
     padding: 1rem;
     background-color: white;
     box-shadow: 1rem 0 2rem gray;
+    position: fixed;
 }
 .navLinks{
     display: grid;
