--- a/components/header/style.module.css
+++ b/components/header/style.module.css
@@ -1,18 +1,58 @@
-.logo{
-    padding-left: 2rem;
-    justify-self: left;
-}
-.container{
-    display: grid;
-    grid-template-columns: minmax(100px,1fr) 1fr;
-    align-items: center;
-    justify-items: center;
-    padding: 1rem;
-    background-color: white;
-    box-shadow: 1rem 0 2rem gray;
-    position: fixed;
-}
-.navLinks{
-    display: grid;
-    grid-template-columns: repeat(6,1fr);
-}
+/*Celulares*/
+@media (min-width:300px) and (max-width:1224px) {
+    .logo{
+        padding-left: 0rem;
+        justify-self: left;
+        height:2.5em;
+    }
+    .container{
+        display: grid;
+        grid-template-columns: minmax(100px,1fr) 1fr;
+        padding: 1rem;
+        background-color: white;
+        box-shadow: 1rem 0 2rem gray;
+        position: fixed;
+        width: 100%;
+    }
+    .menuIcon{
+        justify-self: right;
+        align-self: center;
+        height: 60%;
+    }
+    .navLinks{
+        display: none;
+        grid-column: 1/3;
+        flex-direction: column;
+        justify-items: center;
+        /* visibility: hidden; */
+    }
+    .navLinks a{
+        font-size: 2.5rem;
+        padding: 1rem 0 1rem 0;
+        justify-self: center;
+        align-self: center;
+        text-align: center;
+        width: auto;
+    }
+} 
+/*Computadoras*/
+@media (min-width:1224px) {
+    .logo{
+        padding-left: 2rem;
+        justify-self: left;
+    }
+    .container{
+        display: grid;
+        grid-template-columns: minmax(100px,1fr) 1fr;
+        align-items: center;
+        justify-items: center;
+        padding: 1rem;
+        background-color: white;
+        box-shadow: 1rem 0 2rem gray;
+        position: fixed;
+    }
+    .navLinks{
+        display: grid;
+        grid-template-columns: repeat(6,1fr);
+    }
+} 
