--- a/components/footer/style.module.css
+++ b/components/footer/style.module.css
@@ -1,19 +1,46 @@
-.footerContainer{
-    background-color: hsl(0, 0%, 77%);
-    display: grid;
-    position: static;
-    width: 100%;
-    bottom: 0;
+/*Celulares*/
+@media (min-width:300px) and (max-width:1224px) {
+    .footerContainer{
+        background-color: hsl(0, 0%, 77%);
+        display: grid;
+        position: static;
+        width: 100%;
+        bottom: 0;
+    }
+    .dataContainer{
+        display: grid;
+        grid-template-columns: repeat(4,1fr);
+        padding: 1rem 0 1rem 0;
+    }
+    .derechos{
+        justify-self: center;
+    }
+    .logo{
+        justify-self: center;
+        align-self: center;
+        width: 100px;
+    }
 }
-.dataContainer{
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    padding: 1rem 0 1rem 0;
-}
-.derechos{
-    justify-self: center;
-}
-.logo{
-    justify-self: center;
-    align-self: center;
+/*Computadoras*/
+@media (min-width:1224px) {
+    .footerContainer{
+        background-color: hsl(0, 0%, 77%);
+        display: grid;
+        position: static;
+        width: 100%;
+        bottom: 0;
+    }
+    .dataContainer{
+        display: grid;
+        grid-template-columns: repeat(4,1fr);
+        padding: 1rem 0 1rem 0;
+    }
+    .derechos{
+        justify-self: center;
+    }
+    .logo{
+        justify-self: center;
+        align-self: center;
+        width: 100px;
+    }
 }
