about us and contact us done

--- a/components/carrusel/style.module.css
+++ b/components/carrusel/style.module.css
@@ -12,6 +12,8 @@
 }
 .body_carousel_title{
     align-self: center;
+    justify-self: center;
+    text-align: center;
 }
 .body_carousel_container{
 
