--- a/components/aliance/style.module.css
+++ b/components/aliance/style.module.css
@@ -1,7 +1,7 @@
 /*Celulares*/
 @media (min-width:300px) and (max-width:1224px) {
     .body_aliance_slide img{
-        width: 70%;
+        height: 50px;
         height: 100px;
         object-fit: scale-down;
         margin: 10px 0 10px 0;
@@ -9,7 +9,7 @@
     .body_aliance_container{
         /* display:grid; */
         /* grid-template-columns: 1fr; */
-        padding: 25px 0 25px 0;
+        padding: 25px 15px 25px 15px;
         display: flex;
         flex-direction: column;
     }
