--- a/components/footer/style.module.css
+++ b/components/footer/style.module.css
@@ -10,7 +10,7 @@
     }
     .dataContainer{
         display: grid;
-        grid-template-columns: repeat(4,1fr);
+        /* grid-template-columns: repeat(4,1fr); */
         padding: 1rem 0 1rem 0;
     }
     .derechos{
