--- a/components/header/style.module.css
+++ b/components/header/style.module.css
@@ -22,6 +22,7 @@
         height: 100%;
     }
     .navLinks{
+        -o-object-fit: none;
         display: none;
         grid-column: 1/3;
         flex-direction: column;
