--- a/components/header/style.module.css
+++ b/components/header/style.module.css
@@ -3,7 +3,8 @@
     .logo{
         padding-left: 0rem;
         justify-self: left;
-        height:2.5em;
+        height: 40px;
+        width: 40px;
     }
     .container{
         display: grid;
@@ -19,7 +20,8 @@
     .menuIcon{
         justify-self: right;
         align-self: center;
-        height: 100%;
+        height: 40px;
+        width: 40px;
     }
     .navLinks{
         -o-object-fit: none;
