--- a/components/carrusel/style.module.css
+++ b/components/carrusel/style.module.css
@@ -1,23 +1,62 @@
-.body_carousel_legend{
-    position: absolute;
-    margin: 0 auto 0 auto;
-    left: 0;
-    bottom: 0;
-    /* right: 0; */
-    text-align: center;
-    font-size: 1.5rem;
-    color: white;
-    background-color: rgba(0, 0, 0, 0.30);
-    padding: 10px 25px 10px 25px;
-}
-.body_carousel_title{
-    align-self: center;
-    justify-self: center;
-    text-align: center;
-}
-.body_carousel_container{
 
-    display: flexbox;
-    flex-direction: column;
-    margin: 10px 0 0 0;
+/*Celulares*/
+@media (min-width:300px) and (max-width:1224px) {
+    .body_carousel_legend{
+        position: absolute;
+        margin: 0 auto 0 auto;
+        left: 0;
+        bottom: 0;
+        /* right: 0; */
+        text-align: center;
+        font-size: 1.5rem;
+        color: white;
+        background-color: rgba(0, 0, 0, 0.30);
+        padding: 10px 25px 10px 25px;
+    }
+    .body_carousel_title{
+        align-self: center;
+        justify-self: center;
+        text-align: center;
+    }
+    .body_carousel_container{
+    
+        display: flexbox;
+        flex-direction: column;
+        margin: 10px 0 0 0;
+    }
+}
+@media (min-width:1224px) {
+    .body_carousel_legend{
+        position: absolute;
+        margin: 0 auto 0 50px;
+        left: 0;
+        bottom: 0;
+        /* right: 0; */
+        text-align: center;
+        font-size: 1.5rem;
+        color: white;
+        background-color: rgba(0, 0, 0, 0.30);
+        padding: 10px 25px 10px 25px;
+    }
+    .body_carousel_title{
+        align-self: center;
+        justify-self: center;
+        text-align: center;
+        font-size: 3rem;
+        margin: 50px;
+    }
+    .body_carousel_container{
+    
+        display: flexbox;
+        flex-direction: column;
+        margin: 10px 0 0 0;
+    }
+    .body_carousel_card_container{
+        padding: 0 50px 0 50px;
+        height: 500px;
+    }
+    .body_carousel_card_container img{
+        /* width: auto; */
+        border: 50px black solid;
+    }
 }
