--- a/components/hero/style.module.css
+++ b/components/hero/style.module.css
@@ -81,36 +81,72 @@
 /*Computadoras*/
 @media (min-width:1224px) {
     .heroContainer{
-        display: grid;
-        grid-template-columns: 1fr 1fr;
+        display: flexbox;
+        flex-direction: column;
+        height: 750px;
+        margin-top: 70px;
+        align-content: center;
+        margin-top: 120px;
     }
-    .heroText{
-        display: grid;
-        justify-items: center;
-        align-items: center;
-        padding-top: 35%;
-        padding-bottom: 35%;
-    }
+
     .heroImg{
-        justify-self: right;
-        object-fit: cover;
-        /* height: 50rem; */
-        object-position: 0% 50%;
-        width: 105%;
+        width: 55%;
+        height: 750px;
+        background-image: url('/img/hero_front.JPG');
+        background-repeat: no-repeat;
+        background-position: 0% 100%;
+        background-size: 150%;
+        border-radius: 0% 0% 0% 100%;
+        shape-outside: border-box;
+        float: inline-end;
+        /* right: 0; */
+        /* position: static; */
+        box-shadow: 0px 5px 15px gray;
+        
     }
     .sos{
-        justify-self: center;
+        text-align: center;
         font-size: 5rem;
         color: red;
-        /* font-variant: small-caps; */
-        font: bold;
+        font-weight: 600;
         display: block;
+        padding: 80px 0 5px 0;
+        
     }
     .medGrText{
+        font-weight: 600;
+        /* align-self: flex-start; */
+        text-align: center;
         font-size: 4rem;
+        padding: 0 0 20px 0;
+        display: block;
     }
     .heroContainer p{
-        font-size: larger;
-        padding-left: 2.5rem;
+        width: 90%;
+        position: relative;
+        left: -15px;
+        font-size: 2rem;
+        align-self: flex-start;
+        padding: 0 20px 0 25px;
+        text-align: justify;
+    }
+    .buttonContainer{
+        /* width: 100%; */
+        margin-top: 125px;
+        height: 60px;
+        display: flex;
+        align-content: center;
+        justify-content: center;
+    }
+    .button{
+        /* display: block; */
+        width: 40%;
+        border-radius: 20px;
+        background-color: #C4C4C4;
+        border: none;
+        padding: 10px 0 10px 0;
+        font-size: 1.5rem;
+        /* margin-right: 20%; */
+        
     }
 }
