--- a/components/sede/style.module.css
+++ b/components/sede/style.module.css
@@ -33,5 +33,38 @@
 }
 /*Computadoras*/
 @media (min-width:1224px) {
-    
+    .body_sede_container h2:first-child{
+        align-self: center;
+        font-size: 3rem;
+    }
+    .body_sede_container{
+        display: flex;
+        flex-direction: column;
+        margin: 50px 0 100px 0;
+    }
+    .body_sede_info_container{
+        display: block;
+    }
+
+    .body_sede_img{
+        width:60%; 
+        height: 300px;
+        background-image: url('/img/sos_front.JPG');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: 25% 50%;
+        /* -webkit-clip-path:polygon(0% 20%, 100% 0%,100% 100%,0% 80%); */
+        clip-path:polygon(0% 0%, 100% 0%,80% 100%,0% 100%);
+        shape-outside: polygon(0% 0%, 105% 0%,80% 100%,0% 100%);
+        float: left;
+    }
+    .body_sede_info_container p{
+        text-align: justify;
+        padding-right: 10px;
+        font-size: 1.5rem;
+    }
+    .body_sede_info_container h3{
+        text-align: center;
+        font-size: 2.25rem;
+    }
 }
