--- a/components/hero/style.module.css
+++ b/components/hero/style.module.css
@@ -92,13 +92,14 @@
     .heroImg{
         width: 55%;
         height: 750px;
-        background-image: url('/img/hero_front.JPG');
+        background-image: url('/img/hero_front.webp');
         background-repeat: no-repeat;
         background-position: 0% 100%;
         background-size: 150%;
         border-radius: 0% 0% 0% 100%;
         shape-outside: border-box;
         float: right;
+        
         /* right: 0; */
         /* position: static; */
         box-shadow: 0px 5px 15px gray;
