--- a/components/hero/style.module.css
+++ b/components/hero/style.module.css
@@ -21,7 +21,7 @@
     .heroImg{
         width: 55%;
         height: 100%;
-        background-image: url('/img/hero_front.JPG');
+        background-image: url('/img/hero_front.webp');
         background-repeat: no-repeat;
         background-position: 0px 100%;
         background-size: 150%;
